Properly Calculate and store AFT tags in mp4 files

Amarok previously was looking in the wrong spot for the AFT version. Now
it calculates the offset properly.

BUG: 332811
REVIEW: 117580